# logistics-control-center

./: .cursorrules  .gitignore  .mcp.json  CHANGELOG.md  CONFIG.md  DEMO_GUIDE.md  DEMO_QUICK_REFERENCE.md  QUICKSTART.md  README.md  SETUP.md  app.yaml  architecture-diagram-config.json  architecture-diagram.mmd  cleanup.sh  databricks.yml  env.example  index.html  package-lock.json  package.json  postcss.config.js  pytest.ini  requirements.txt  start-dev.sh  start.sh  tailwind.config.ts  test_backend.py  vite.config.ts
.ai-dev-kit/: .installed-skills
examples/staffing-optimization-main/: .gitignore  README.md  app.yml  components.json  databricks.yml  package.json  pyproject.toml  tsconfig.json  vite.config.ts
examples/staffing-optimization-main/.build/: requirements.txt
examples/staffing-optimization-main/.cursor/rules/: project.mdc
examples/staffing-optimization-main/notebooks/: run_optimization.ipynb
examples/staffing-optimization-main/scripts/: deploy.sh
examples/staffing-optimization-main/src/staffing_optimization/backend/: app.py  config.py  database.py  databricks_service.py  db_models.py  dependencies.py  models.py  optimization_service.py  router.py  runtime.py
examples/staffing-optimization-main/src/staffing_optimization/ui/: index.html
examples/staffing-optimization-main/src/staffing_optimization/ui/lib/: api-client.ts  api.ts  graph-utils.ts
examples/staffing-optimization-main/src/staffing_optimization/ui/types/: routeTree.gen.ts
examples/staffing-optimization-main/tests/: test_paginated_results.py  test_run_status_refresh.py
(+175 files in other folders)
